overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,13 @@
 #navbar {
   text-align: center;
   background-color: rgba(245,245,245,0.5);
-  padding: 10px;
+  padding: none;
   backdrop-filter: blur(5px);
   position: fixed;
-  top: 0;
   width: 100%;
-  display: block;
+  box-sizing: border-box;
+  top: 0;
+   display:inline-block;
   transition: top 0.3s;
   z-index: 1;
 }
@@ -41,8 +42,8 @@
 .navButton{
   cursor: pointer;
   font-size: 1.1em;
-  padding-left: 10px;
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 .navButton:hover{
@@ -56,4 +57,8 @@
      -moz-user-select: none; 
       -ms-user-select: none; 
           user-select: none;
+}
+
+.test{
+  overflow: hidden;
 }
