--- a/src/stylesheet/Shape.css
+++ b/src/stylesheet/Shape.css
@@ -1,8 +1,6 @@
 .square {
-  border: 2px solid #73AD21;
-  padding: 20px; 
-  width: 200px;
-  height: 150px;  
+    height: 50px;
+    width: 50px;
 }
 
 .circle {
@@ -25,7 +23,7 @@
     background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
 }
 
-.none{
+.none {
     background-color: rgba(255, 255, 255, 0);
 }
 
@@ -36,12 +34,11 @@
 }
 
 .border-gradient-purple {
-   background-color: rgba(255, 255, 255, 0);
-   border-image: linear-gradient(315deg, #21d190 0%, #d65bca 74%) 1;
+    background-color: rgba(255, 255, 255, 0);
+    border-image: linear-gradient(315deg, #21d190 0%, #d65bca 74%) 3;
 }
 
 .border-gradient-blue {
     background-color: rgba(255, 255, 255, 0);
     border-image: linear-gradient(315deg, #9eabe4 0%, #77eed8 74%) 1;
 }
-
